Fixed torso padding on tablet and greater query

--- a/css/styles.css
+++ b/css/styles.css
@@ -740,7 +740,8 @@ table {
 	}
 
 	.torso {
-		padding: 2em 0;
+		padding-bottom: 2em;
+		padding-top: 2em;
 	}
 
 	aside.primary {
